--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -5,7 +5,7 @@
 
   <script type="text/javascript" src="/node_modules/pipe/node_modules/requirejs/require.js"></script>
 	<script type="text/javascript" src="/node_modules/pipe/node_modules/karma-traceur-preprocessor/node_modules/traceur/bin/traceur-runtime.js"></script>
-  
+
   <!-- TODO: include source maps! -->
   <!-- TODO: create standalone repo for examples, e.g. v2_examples -->
 
@@ -14,11 +14,10 @@
       paths: {
         'di': '/node_modules/di/dist/amd',
         'assert': '/node_modules/pipe/node_modules/assert/dist/amd/assert',
-        'templating': '/dist/amd',
-        'q': '/node_modules/di/node_modules/q/q'
+        'templating': '/dist/amd'
       },
       deps: ['templating/bootstrap']
-    });  
+    });
   </script>
 
   <module src="/temp/examples/helloworld.js"></module>
