--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -4,7 +4,7 @@
   <script type="text/javascript" src="/node_modules/di/node_modules/es6-shim/es6-shim.js"></script>
 
   <script type="text/javascript" src="/node_modules/pipe/node_modules/requirejs/require.js"></script>
-	<script type="text/javascript" src="/node_modules/pipe/node_modules/karma-traceur-preprocessor/node_modules/traceur/bin/traceur-runtime.js"></script>
+  <script type="text/javascript" src="/node_modules/pipe/node_modules/karma-traceur-preprocessor/node_modules/traceur/bin/traceur-runtime.js"></script>
 
   <!-- TODO: include source maps! -->
   <!-- TODO: create standalone repo for examples, e.g. v2_examples -->
@@ -14,7 +14,9 @@
       paths: {
         'di': '/node_modules/di/dist/amd',
         'assert': '/node_modules/pipe/node_modules/assert/dist/amd/assert',
-        'templating': '/dist/amd'
+        'templating': '/dist/amd',
+        'expressionist': '/node_modules/expressionist/dist/amd',
+        'watchtower': '/node_modules/watchtower/dist/amd'
       },
       deps: ['templating/bootstrap']
     });
@@ -24,7 +26,7 @@
 </head>
 <body ng-app>
 
-	<exp-hello></exp-hello>
+  <exp-hello></exp-hello>
 
 </body>
 </html>
