--- a/examples/greet.html
+++ b/examples/greet.html
@@ -1,1 +1,10 @@
+<module src="./ngIf"></module>
+<module src="./helloworld"></module>
 <input type="text" bind-value="user">{{greet(user)}}
+<p>
+<exp-hello ng-if="{{!!user}}"></exp-hello>
+<!-- 
+<exp-hello ng-if bind-ng-if="!!user"></exp-hello>
+-->
+
+</p>
