refactor: rename assert -> rtts-assert

--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -21,7 +21,7 @@
           'templating': 'dist/amd/index',
           'templating_compiler': 'dist/amd/index_compiler',
           'di': 'node_modules/di/dist/amd/index',
-          'assert': 'node_modules/assert/dist/amd/assert',
+          'rtts-assert': 'node_modules/rtts-assert/dist/amd/assert',
           'expressionist': 'node_modules/expressionist/dist/amd/index',
           'watchtower': 'node_modules/watchtower/dist/amd/index'
         }
