--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -19,13 +19,14 @@
       map: {
         '*': {
           'templating': 'dist/amd/index',
+          'templating_compiler': 'dist/amd/index_compiler',
           'di': 'node_modules/di/dist/amd/index',
           'assert': 'node_modules/assert/dist/amd/assert',
           'expressionist': 'node_modules/expressionist/dist/amd/index',
           'watchtower': 'node_modules/watchtower/dist/amd/index'
         }
       },
-      deps: ['templating']
+      deps: ['templating', 'templating_compiler']
     });
   </script>
 
