fix: update demo to transpile reps from source

--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -14,17 +14,17 @@
     require.config({
       baseUrl: '/temp/examples',
       paths: {
-        'node_modules': '/node_modules',
+        'deps': '/temp/deps',
         'dist': '/dist'
       },
       map: {
         '*': {
           'templating': 'dist/amd/index',
           'templating_compiler': 'dist/amd/index_compiler',
-          'di': 'node_modules/di/dist/amd/index',
-          'rtts-assert': 'node_modules/rtts-assert/dist/amd/assert',
-          'expressionist': 'node_modules/expressionist/dist/amd/index',
-          'watchtower': 'node_modules/watchtower/dist/amd/index'
+          'di': 'deps/di/index',
+          'rtts-assert': 'deps/rtts-assert/assert',
+          'expressionist': 'deps/expressionist/index',
+          'watchtower': 'deps/watchtower/index'
         }
       },
       deps: ['templating'],
