--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <script type="text/javascript" src="/node_modules/es6-shim/es6-shim.js"></script>
+  <script type="text/javascript" src="/node_modules/zone.js/zone.js"></script>
 
   <script type="text/javascript" src="/node_modules/requirejs/require.js"></script>
   <script type="text/javascript" src="/node_modules/traceur/bin/traceur-runtime.js"></script>
+  <script type="text/javascript" src="/utils/loader.js"></script>
 
   <!-- TODO: include source maps! -->
   <!-- TODO: create standalone repo for examples, e.g. v2_examples -->
