chore(examples): compile deps in-place
Instead of compiling the deps into `temp/deps/*`,
keep them in `node_modules/*`.

I'm not saying this is the best way to do it, but 
at least it will use the same directory structure for NPM packages as well as GIT repos.

--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -15,17 +15,17 @@
     require.config({
       baseUrl: '/temp/examples',
       paths: {
-        'deps': '/temp/deps',
+        'deps': '/node_modules',
         'dist': '/dist'
       },
       map: {
         '*': {
           'templating': 'dist/amd/index',
           'templating_compiler': 'dist/amd/index_compiler',
-          'di': 'deps/di/index',
-          'rtts-assert': 'deps/rtts-assert/assert',
-          'expressionist': 'deps/expressionist/index',
-          'watchtower': 'deps/watchtower/index'
+          'di': 'deps/di/dist/amd/index',
+          'rtts-assert': 'deps/rtts-assert/dist/amd/assert',
+          'expressionist': 'deps/expressionist/dist/amd/index',
+          'watchtower': 'deps/watchtower/dist/amd/index'
         }
       },
       deps: ['templating'],
