chore: compile templates on the server
- Add `gulp templates` task which pre-compiles the templates on the
server.
- Migrate the helloworld example to use server-side compiled templates.

We use the same code as when compiling the templates on the client. Templates are compiled by just requiring them with RequireJS. We use
a different implementation of DocumentLoader (which reads the templates
from FS and instantiate jsdom from it).

Paired with Tobias.

--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -6,7 +6,8 @@
 
   <script type="text/javascript" src="/node_modules/requirejs/require.js"></script>
   <script type="text/javascript" src="/node_modules/traceur/bin/traceur-runtime.js"></script>
-  <script type="text/javascript" src="/utils/loader.js"></script>
+  <!-- TODO(vojta): add a get param to switch between on the fly / server-side pre-compiled -->
+  <!-- <script type="text/javascript" src="/utils/loader.js"></script> -->
 
   <!-- TODO: include source maps! -->
   <!-- TODO: create standalone repo for examples, e.g. v2_examples -->
@@ -16,12 +17,13 @@
       baseUrl: '/temp/examples',
       paths: {
         'deps': '/node_modules',
-        'dist': '/dist'
+        'dist': '/dist',
+        'examples': '/temp/examples'
       },
       map: {
         '*': {
           'templating': 'dist/amd/index',
-          'templating_compiler': 'dist/amd/index_compiler',
+          'compile_ng_template': 'dist/amd/compiler/requirejs_html',
           'di': 'deps/di/dist/amd/index',
           'rtts-assert': 'deps/rtts-assert/dist/amd/assert',
           'expressionist': 'deps/expressionist/dist/amd/index',
@@ -35,7 +37,7 @@
     });
   </script>
 
-  <module src="helloworld"></module>
+  <module src="./helloworld"></module>
 </head>
 <body ng-app>
 
