--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="/node_modules/requirejs/require.js"></script>
   <script type="text/javascript" src="/node_modules/traceur/bin/traceur-runtime.js"></script>
   <!-- TODO(vojta): add a get param to switch between on the fly / server-side pre-compiled -->
-  <!-- <script type="text/javascript" src="/utils/loader.js"></script> -->
+  <script type="text/javascript" src="/utils/loader.js"></script>
 
   <!-- TODO: include source maps! -->
   <!-- TODO: create standalone repo for examples, e.g. v2_examples -->
