--- a/examples/greet.html
+++ b/examples/greet.html
@@ -1,6 +1,7 @@
 <module src="./ngIf"></module>
 <module src="./helloworld"></module>
-<input type="text" bind-value="user">{{greet(user)}}
+<input type="text" class="username" bind-value="user">
+<span class="message">{{greet(user)}}</span>
 <button on-click="incCounter()">Add</button>
 <p>
 <exp-hello ng-if="{{!!user}}"></exp-hello>
