--- a/examples/helloworld.html
+++ b/examples/helloworld.html
@@ -37,11 +37,11 @@
     });
   </script>
 
-  <module src="./helloworld"></module>
+  <module src="./greet"></module>
 </head>
 <body ng-app>
 
-  <exp-hello></exp-hello>
+  <exp-greet></exp-greet>
 
 </body>
 </html>
