docs(example): add todo example

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -8,6 +8,7 @@
     <li><a href="polymertab/index.html">Tab container and tabs (polymer custom elements with angular di)</a></li>
     <li><a href="video/index.html">Video player</a></li>
     <li><a href="ngmodel/index.html">NgModel with validation</a></li>
+    <li><a href="todo/index.html">Simple Todo example</a></li>
 </ul>
 
 </body>
